--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-stripe-checkout": "^2.6.3",
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
-    "stripe": "^5.5.0"
+    "stripe": "^5.5.0",
+    "sweetalert": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
