--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redux": "^3.7.2",
     "redux-promise-middleware": "^5.0.0",
     "stripe": "^5.5.0",
-    "sweetalert": "^2.1.0"
+    "sweetalert": "^2.1.0",
+    "xml-js": "^1.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
